--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
   "license": "MIT",
   "dependencies": {
     "argon2": "^0.41.1",
+    "argon2-browser": "^1.18.0",
     "commander": "^12.1.0"
   },
   "devDependencies": {
     "eslint": "^9.0.0",
     "prettier": "^3.3.0"
+  },
+  "exports": {
+    ".": "./src/index.js",
+    "./crypto-browser": "./src/crypto-browser.js"
   }
 }
